[package]
name = "rann-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
fastrand = "2.0.1"
nalgebra = "0.32.3"
rann-traits = { version = "0.1.0", path = "../rann-traits" }

[dev-dependencies]
float-cmp = "0.9.0"
